# Brumskii-Art

./: CMakeLists.txt  README.md  README.txt  main.cpp
HEADER_FILES/: B.h  C.h
HEADER_FILES_and_SOURCE_FILE/: A.h  B.h  C.hpp  D.hpp  E.hpp  F.hpp  G.hpp  H.hpp  I.hpp  J.hpp  K.hpp  L.hpp  M.hpp  N.hpp  O.hpp  P.h  P.hpp  Q.hpp  R.hpp  S.hpp  SPACE.hpp  T.hpp  U.hpp  V.hpp  W.hpp  X.hpp  Y.hpp  Z.hpp  boolean_functions.hpp  main.cpp
SOURCE_FILE/: main.cpp
include/: A.hpp  B.hpp  C.hpp  D.hpp  E.hpp  F.hpp  G.hpp  H.hpp  I.hpp  J.hpp  K.hpp  L.hpp  M.hpp  N.hpp  O.hpp  P.hpp  Q.hpp  R.hpp  S.hpp  SPACE.hpp  T.hpp  U.hpp  V.hpp  W.hpp  X.hpp  Y.hpp  Z.hpp  boolean_functions.hpp
src/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp  P.cpp  Q.cpp  R.cpp  S.cpp  SPACE.cpp  T.cpp  U.cpp  V.cpp  W.cpp  X.cpp  Y.cpp  Z.cpp  boolean_functions.cpp  main.cpp
